--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
 	"author": "Daniel Reznick",
-	"name": "feedback_me",
+	"name": "feedback",
 	"description": "This jQuery plug-in allows user to easily add an animatable UI widget with a feedback form which slides from the side of the screen.",
-	"version": "0.5.8",
 	"homepage": "http://feedback-me.appspot.com/",
 
     "authors": [
